Routing service changes are done